// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`version v1 yarn.lock 1`] = `
"# THIS IS AN AUTOGENERATED FILE. DO NOT EDIT THIS FILE DIRECTLY.
# yarn lockfile v1


\\"@babel/code-frame@^7.0.0\\", \\"@babel/code-frame@^7.10.1\\":
  version \\"7.10.1\\"
  resolved \\"https://registry.npmjs.org/@babel/code-frame/-/code-frame-7.10.1.tgz#d5481c5095daa1c57e16e54c6f9198443afb49ff\\"
  integrity sha512-IGhtTmpjGbYzcEDOw7DcQtbQSXcG9ftmAXtWTu9V936vDye4xjjekktF"
`;

exports[`version v2 meta-only.lock 1`] = `
"# This file is generated by running \\"yarn install\\" inside your project.
# Manual changes might be lost - proceed with caution!

__metadata:
  version: 4
"
`;

exports[`version v2 yarn.lock 1`] = `
"# This file is generated by running \\"yarn install\\" inside your project.
# Manual changes might be lost - proceed with caution!

__metadata:
  version: 4

\\"library@npm:>=1.0.0, library@npm:>=1.1.0\\":
  version: 3.0.0
  resolution: \\"library@npm:3.0.0\\"
  checksum: 2/6fc98369f954229cbb6e4ce1a27a4202a17b4ad67b8def64322e9351414eef405b8783ecbe1b8f0334e52935ae8c43cd3"
`;

exports[`version v3 meta-only.lock 1`] = `
"# This file is generated by running \\"yarn install\\" inside your project.
# Manual changes might be lost - proceed with caution!

__metadata:
  version: 6
  cacheKey: 8
"
`;

exports[`version v3 yarn.lock 1`] = `
"# This file is generated by running \\"yarn install\\" inside your project.
# Manual changes might be lost - proceed with caution!

__metadata:
  version: 6
  cacheKey: 8

\\"@bluelovers/fast-glob@npm:^3.0.4\\":
  version: 3.0.4
  resolution: \\"@bluelovers/fast-glob@npm:3.0.4\\"
  dependencies:
    bluebird: ^3
    fast-glob: ^3
  checksum: b7417447ae8fa5c1cde2dded1f11"
`;

exports[`version v3 yarn-version-7.lock 1`] = `
"# This file is generated by running \\"yarn install\\" inside your project.
# Manual changes might be lost - proceed with caution!

__metadata:
  version: 7
  cacheKey: 9

\\"@actions/core@npm:^1.2.6\\":
  version: 1.2.6
  resolution: \\"@actions/core@npm:1.2.6\\"
  checksum: 034e57fcb5f944d5fb0ef55be1b212dd88e23d1a50aaffda874cb94e8f4bfa633a66f108f26e81a7cce287cd2b349aa"
`;
